--- a/templates/bot-ingress.yaml
+++ b/templates/bot-ingress.yaml
@@ -1,4 +1,3 @@
-
 {{- range .Values.bots }}
 {{- if .ingress.enabled }}
 apiVersion: networking.k8s.io/v1
@@ -11,9 +10,9 @@ metadata:
     app.kubernetes.io/instance: {{ $.Release.Name }}
     app.kubernetes.io/managed-by: Helm
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
+  ingressClassName: nginx
   rules:
     - host: {{ .domain }}
       http:
